Fixing CoreLayout padding overflow

--- a/mdx-layout-core/src/CoreLayout.scss
+++ b/mdx-layout-core/src/CoreLayout.scss
@@ -11,11 +11,7 @@ main {
 }
 
 article {
-  margin-left: auto;
-  margin-right: auto;
   overflow: auto;
-  width: 100%;
-  max-width: 800px;
   padding: 1rem;
 }
 
